--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   background-color: lavender;
   background-blend-mode: lighten;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header{
@@ -35,10 +36,59 @@ nav a:hover{
   color:blue ;
 }
 
+/* main {
+  
+} */
+
+section:nth-child(1){
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+section:nth-child(2){
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  margin-top: 3em;
+  text-align: center;
+  left: 1em;
+}
+
+section:nth-child(3){
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+h2{
+  font-weight: bold;
+}
+
+p{
+  /* width: 50%; */
+  position: relative;
+  width: 70%;
+  margin-top: .5em;
+  margin-bottom: .5em;
+  left: 7em;
+}
+
 footer{
   display: flex;  
   background-color: gray;
   color: white;
-  justify-content: space-between
+  align-content: center;
+  justify-content: space-evenly;
+}
 
+footer p{
+  position: relative;
+  left: 1em;
 }
